Sets max height and overflowing to avoid too tall box (allowing for more layers)

--- a/css/popup.css
+++ b/css/popup.css
@@ -11,6 +11,11 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+.wrapper {
+  max-height: 600px;
+  overflow: auto;
+}
+
 h1 {
   font-size: 1.1em;
   margin-top: 6px;
